--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
     "name": "aboutme",
-    "version": "1.0.0",
-    "description": "About me pages",
-    "main": "index.js",
+    "version": "0.0.0",
+    "private": true,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node ./bin/www",
+        "dev": "nodemon ./bin/www"
     },
-    "keywords": [
-        "about",
-        "me",
-        "about",
-        "me"
-    ],
-    "author": "Kyra",
-    "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
+        "cookie-parser": "^1.4.4",
+        "debug": "~2.6.9",
+        "express": "^4.16.4",
         "express-es6-template-engine": "^2.1.9",
-        "helmet": "^3.21.1"
+        "http-errors": "~1.6.3",
+        "morgan": "^1.9.1",
+        "pg-promise": "^9.3.3"
     }
 }
